--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ body {
     width: 350px;
     padding: 20px;
     border-radius: 16px;
-    background: rgba(0, 0, 0, 0.2);
+    background:  rgba(0, 0, 0, 0.3);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(10px);
-    text-align: center;
 }
 
 #inputBox {
@@ -35,7 +33,7 @@ body {
     color: white;
     padding: 10px;
     outline: none;
-    box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.1);
+    box-shadow:  0px 0px 10px rgba(255, 255, 255, 0.1);
 }
 
 #inputBox::placeholder {
@@ -84,17 +82,16 @@ div {
 .equalTo:hover {
     background: darkorange;
 }
-#histor-container{
-    margin:5px;
-}
-
  
 #history-container {
-    width: 350px;
-    margin-top: 20px;
-    text-align: left;
-    color: white;
+    width: 300px;
+    margin: 20px;
+    color: black;
     font-size: 16px;
+    border: black solid 2px;
+    border-radius: 5px;
+    background: orange;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
  
